k8s/gcp-tracing-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-one-svc
spec:
 selector:
  app: service-one
 ports:
 - protocol: TCP
   port: 80
   targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-two-svc
spec:
 selector:
  app: service-two
 ports:
 - protocol: TCP
   port: 9090
   targetPort: 9090
