k8s/gcp-tracing-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gcp-tracing-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: service-one-svc
          servicePort: 80
